# Franta-rust

./: .gitignore  Cargo.toml  README.md  config_example.toml
src/: config.rs  lib.rs  main.rs  toulen.rs
src/client/: event_handler.rs  event_loop.rs  events.rs  mod.rs
src/commands/: builder.rs  mod.rs
