[package]
name = "franta-rust"
version = "0.1.0"
edition = "2021"

[registries.crates-io]
protocol = "sparse"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.22.0", features = ["full"] }
tokio-tungstenite = { version = "*", features = ["native-tls"] }
futures-util = "0.3.25"
http = "0.2.8"
toml = "0.5.10"